positions per actors per time

--- a/ipynb/video360_face_clustering.ipynb
+++ b/ipynb/video360_face_clustering.ipynb
@@ -58,11 +58,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video_path = \"D:/Movies/360Video/omelete.mp4\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = video_clustering.cluster(\"D:/Movies/360Video/omelete.mp4\", fps=1)"
+    "res = video_clustering.cluster(video_path, fps=1)"
    ]
   },
   {
@@ -144,115 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>frames</th>\n",
-       "      <th>urls</th>\n",
-       "      <th>bounds</th>\n",
-       "      <th>actors_id</th>\n",
-       "      <th>center_face_pos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30</td>\n",
-       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
-       "      <td>[(96, 393), (123, 396), (149, 399), (149, 430)...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[122.625, 429.5]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30</td>\n",
-       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
-       "      <td>[(1535, 397), (1561, 396), (1589, 395), (1589,...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[1561.75, 429.875]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
-       "      <td>[(542, 417), (569, 415), (596, 414), (596, 450...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[569.0, 451.0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>30</td>\n",
-       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
-       "      <td>[(1043, 411), (1071, 413), (1100, 416), (1100,...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[1071.375, 447.875]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30</td>\n",
-       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
-       "      <td>[(1820, 385), (1836, 384), (1855, 383), (1855,...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[1837.125, 406.375]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   frames                                     urls  \\\n",
-       "0      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
-       "1      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
-       "2      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
-       "3      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
-       "4      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
-       "\n",
-       "                                              bounds  actors_id  \\\n",
-       "0  [(96, 393), (123, 396), (149, 399), (149, 430)...          1   \n",
-       "1  [(1535, 397), (1561, 396), (1589, 395), (1589,...          2   \n",
-       "2  [(542, 417), (569, 415), (596, 414), (596, 450...          0   \n",
-       "3  [(1043, 411), (1071, 413), (1100, 416), (1100,...          5   \n",
-       "4  [(1820, 385), (1836, 384), (1855, 383), (1855,...          3   \n",
-       "\n",
-       "       center_face_pos  \n",
-       "0     [122.625, 429.5]  \n",
-       "1   [1561.75, 429.875]  \n",
-       "2       [569.0, 451.0]  \n",
-       "3  [1071.375, 447.875]  \n",
-       "4  [1837.125, 406.375]  "
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#obtaining the center position of the bounding boxes\n",
     "\n",
-    "actors_pos['center_face_pos'] = actors_pos.bounds.apply(lambda x: np.array(x).mean(axis = 0))\n",
-    "actors_pos.head()"
+    "actors_pos['center_face_pos'] = actors_pos.bounds.apply(lambda x: np.array(x).mean(axis = 0))"
    ]
   },
   {
@@ -264,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,8 +206,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time Reference"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -330,6 +244,7 @@
        "      <th>actors_id</th>\n",
        "      <th>center_face_pos</th>\n",
        "      <th>lat_long</th>\n",
+       "      <th>time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -341,6 +256,7 @@
        "      <td>1</td>\n",
        "      <td>[122.625, 429.5]</td>\n",
        "      <td>{'lat': 9.46875, 'long': -157.0078125}</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -350,6 +266,7 @@
        "      <td>2</td>\n",
        "      <td>[1561.75, 429.875]</td>\n",
        "      <td>{'lat': 9.3984375, 'long': 112.828125}</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -359,6 +276,7 @@
        "      <td>0</td>\n",
        "      <td>[569.0, 451.0]</td>\n",
        "      <td>{'lat': 5.4375, 'long': -73.31250000000001}</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -368,6 +286,7 @@
        "      <td>5</td>\n",
        "      <td>[1071.375, 447.875]</td>\n",
        "      <td>{'lat': 6.0234375, 'long': 20.8828125}</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -377,6 +296,7 @@
        "      <td>3</td>\n",
        "      <td>[1837.125, 406.375]</td>\n",
        "      <td>{'lat': 13.8046875, 'long': 164.4609375}</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -397,21 +317,109 @@
        "3  [(1043, 411), (1071, 413), (1100, 416), (1100,...          5   \n",
        "4  [(1820, 385), (1836, 384), (1855, 383), (1855,...          3   \n",
        "\n",
-       "       center_face_pos                                     lat_long  \n",
-       "0     [122.625, 429.5]       {'lat': 9.46875, 'long': -157.0078125}  \n",
-       "1   [1561.75, 429.875]       {'lat': 9.3984375, 'long': 112.828125}  \n",
-       "2       [569.0, 451.0]  {'lat': 5.4375, 'long': -73.31250000000001}  \n",
-       "3  [1071.375, 447.875]       {'lat': 6.0234375, 'long': 20.8828125}  \n",
-       "4  [1837.125, 406.375]     {'lat': 13.8046875, 'long': 164.4609375}  "
+       "       center_face_pos                                     lat_long  time  \n",
+       "0     [122.625, 429.5]       {'lat': 9.46875, 'long': -157.0078125}   1.0  \n",
+       "1   [1561.75, 429.875]       {'lat': 9.3984375, 'long': 112.828125}   1.0  \n",
+       "2       [569.0, 451.0]  {'lat': 5.4375, 'long': -73.31250000000001}   1.0  \n",
+       "3  [1071.375, 447.875]       {'lat': 6.0234375, 'long': 20.8828125}   1.0  \n",
+       "4  [1837.125, 406.375]     {'lat': 13.8046875, 'long': 164.4609375}   1.0  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "cap=cv2.VideoCapture(video_path)\n",
+    "original_fps = int(round(cap.get(cv2.CAP_PROP_FPS)))\n",
+    "\n",
+    "actors_pos['time'] = actors_pos.frames/original_fps\n",
     "actors_pos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>actors_id</th>\n",
+       "      <th>lat_long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'lat': 9.46875, 'long': -157.0078125}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'lat': 9.3984375, 'long': 112.828125}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'lat': 5.4375, 'long': -73.31250000000001}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>{'lat': 6.0234375, 'long': 20.8828125}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'lat': 13.8046875, 'long': 164.4609375}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time  actors_id                                     lat_long\n",
+       "0   1.0          1       {'lat': 9.46875, 'long': -157.0078125}\n",
+       "1   1.0          2       {'lat': 9.3984375, 'long': 112.828125}\n",
+       "2   1.0          0  {'lat': 5.4375, 'long': -73.31250000000001}\n",
+       "3   1.0          5       {'lat': 6.0234375, 'long': 20.8828125}\n",
+       "4   1.0          3     {'lat': 13.8046875, 'long': 164.4609375}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actors_pos[['time', 'actors_id','lat_long']].head()"
    ]
   },
   {
