--- a/ipynb/video360_face_clustering.ipynb
+++ b/ipynb/video360_face_clustering.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "import sys\n",
@@ -20,12 +12,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import cv2\n",
-    "from faces_clustering import VideoClustering\n",
-    "\n",
-    "from mtcnn_torch import MTCNN_Torch\n",
-    "from sphere_mtcnn import SphereMTCNN_Torch\n",
-    "from faces_viewport import MTCNN_tf, ViewportsFaceDetector"
+    "import cv2"
    ]
   },
   {
@@ -34,19 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mtcnn_torch = MTCNN_Torch()\n",
-    "mtcnn_tf = MTCNN_tf()\n",
-    "viewports_torch = ViewportsFaceDetector(torch = True, width = 200, rows = 3, cols = 6, nms_th=0.25)\n",
-    "viewports_tf = ViewportsFaceDetector(torch = False, width = 200, rows = 3, cols = 6, nms_th=0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video_clustering = VideoClustering('senet50', viewports_torch, 'agglomerative', verbose=0)"
+    "video_path = \"D:/Movies/360Video/omelete.mp4\"\n",
+    "dataframe_path = video_path.split('.')[0]+'_dataframe.pkl'"
    ]
   },
   {
@@ -58,16 +34,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
-    "video_path = \"D:/Movies/360Video/omelete.mp4\""
+    "from faces_clustering import VideoClustering\n",
+    "\n",
+    "from mtcnn_torch import MTCNN_Torch\n",
+    "from sphere_mtcnn import SphereMTCNN_Torch\n",
+    "from faces_viewport import MTCNN_tf, ViewportsFaceDetector"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mtcnn_torch = MTCNN_Torch()\n",
+    "mtcnn_tf = MTCNN_tf()\n",
+    "viewports_torch = ViewportsFaceDetector(torch = True, width = 200, rows = 3, cols = 6, nms_th=0.25)\n",
+    "viewports_tf = ViewportsFaceDetector(torch = False, width = 200, rows = 3, cols = 6, nms_th=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video_clustering = VideoClustering('senet50', viewports_torch, 'agglomerative', verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48103118e3e547c9b243bc7aae5c3e8b",
+       "model_id": "5db56abd0eb54f49bc8368e58c87a1ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,6 +139,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#adjusting and saving dataframe\n",
+    "\n",
+    "columns_subtitles = ['frames','urls', 'bounds', video_clustering.cluster_column]\n",
+    "actors_pos =  res[columns_subtitles].copy()\n",
+    "actors_pos.columns = ['frames','urls', 'bounds', 'actors_id']\n",
+    "actors_pos.sort_values(by=['frames'], inplace = True)\n",
+    "actors_pos.reset_index(drop=True, inplace = True)\n",
+    "\n",
+    "actors_pos.to_pickle(dataframe_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,22 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#adjusting dataframe\n",
-    "\n",
-    "columns_subtitles = ['frames','urls', 'bounds', video_clustering.cluster_column]\n",
-    "actors_pos =  res[columns_subtitles].copy()\n",
-    "actors_pos.columns = ['frames','urls', 'bounds', 'actors_id']\n",
-    "actors_pos.sort_values(by=['frames'], inplace = True)\n",
-    "actors_pos.reset_index(drop=True, inplace = True)"
+    "actors_pos = pd.read_pickle(dataframe_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +345,7 @@
        "4  [1837.125, 406.375]     {'lat': 13.8046875, 'long': 164.4609375}   1.0  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +433,7 @@
        "4   1.0          3     {'lat': 13.8046875, 'long': 164.4609375}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
