Saving csv file with actors positions

--- a/ipynb/video360_face_clustering.ipynb
+++ b/ipynb/video360_face_clustering.ipynb
@@ -12,7 +12,8 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import cv2"
+    "import cv2\n",
+    "import os"
    ]
   },
   {
@@ -22,7 +23,8 @@
    "outputs": [],
    "source": [
     "video_path = \"D:/Movies/360Video/omelete.mp4\"\n",
-    "dataframe_path = video_path.split('.')[0]+'_dataframe.pkl'"
+    "dataframe_path = video_path.split('.')[0]+'_dataframe.pkl'\n",
+    "fps_extraction = 1"
    ]
   },
   {
@@ -80,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = video_clustering.cluster(video_path, fps=1)"
+    "res = video_clustering.cluster(video_path, fps=fps_extraction)"
    ]
   },
   {
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +347,7 @@
        "4  [1837.125, 406.375]     {'lat': 13.8046875, 'long': 164.4609375}   1.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_reference = actors_pos[['time', 'actors_id','lat_long']].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving position by actors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,13 +451,57 @@
        "4   1.0          3     {'lat': 13.8046875, 'long': 164.4609375}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "actors_pos[['time', 'actors_id','lat_long']].head()"
+    "time_reference.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_actor_positions(actor_id, time_reference, video_path, fps_extraction):\n",
+    "    positions_folder = f\"{video_path.split('.')[0]}_actor_positions\"\n",
+    "    if not os.path.isdir(positions_folder):\n",
+    "        os.mkdir(positions_folder)\n",
+    "\n",
+    "    pos_file_path = f\"{positions_folder}/actor_{actor_id}.csv\"\n",
+    "    if os.path.exists(pos_file_path):\n",
+    "        print(f'{pos_file_path} already exists! File have not been created.')\n",
+    "        return pos_file_path\n",
+    "\n",
+    "    time_positions = time_reference.loc[time_reference.actors_id == actor_id][['time']].copy()\n",
+    "    time_positions['lat'] = time_reference['lat_long'].apply(lambda x: x['lat'])\n",
+    "    time_positions['long'] = time_reference['lat_long'].apply(lambda x: x['long'])\n",
+    "\n",
+    "\n",
+    "    f = open(pos_file_path, 'a')\n",
+    "    f.write(f'fps_extraction:{fps_extraction}\\n')\n",
+    "    time_positions.to_csv(f, index=False)\n",
+    "    f.close()\n",
+    "    return pos_file_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_args = [time_reference, video_path, fps_extraction]\n",
+    "\n",
+    "_ = save_actor_positions(0, *default_args)\n",
+    "_ = save_actor_positions(1, *default_args)\n",
+    "_ = save_actor_positions(2, *default_args)\n",
+    "_ = save_actor_positions(3, *default_args)\n",
+    "_ = save_actor_positions(4, *default_args)\n",
+    "_ = save_actor_positions(5, *default_args)"
    ]
   },
   {
