--- a/ipynb/video360_face_clustering.ipynb
+++ b/ipynb/video360_face_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
     "    d_y = (y/max_y)*180\n",
     "    d_x = (x/max_x)*360\n",
     "\n",
-    "    lat = 90 - d_y    #where 90 is the top and -90 is the bottom\n",
+    "    lat = d_y-90    #where 90 is the bottom and -90 is the top\n",
     "    long = d_x - 180  #where 180 is the right and -180 is the left\n",
     "\n",
     "    return {'lat': lat, 'long': long}"
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "      <td>[(96, 393), (123, 396), (149, 399), (149, 430)...</td>\n",
        "      <td>1</td>\n",
        "      <td>[122.625, 429.5]</td>\n",
-       "      <td>{'lat': 9.46875, 'long': -157.0078125}</td>\n",
+       "      <td>{'lat': -9.46875, 'long': -157.0078125}</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -287,7 +287,7 @@
        "      <td>[(1535, 397), (1561, 396), (1589, 395), (1589,...</td>\n",
        "      <td>2</td>\n",
        "      <td>[1561.75, 429.875]</td>\n",
-       "      <td>{'lat': 9.3984375, 'long': 112.828125}</td>\n",
+       "      <td>{'lat': -9.3984375, 'long': 112.828125}</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -297,7 +297,7 @@
        "      <td>[(542, 417), (569, 415), (596, 414), (596, 450...</td>\n",
        "      <td>0</td>\n",
        "      <td>[569.0, 451.0]</td>\n",
-       "      <td>{'lat': 5.4375, 'long': -73.31250000000001}</td>\n",
+       "      <td>{'lat': -5.4375, 'long': -73.31250000000001}</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -307,7 +307,7 @@
        "      <td>[(1043, 411), (1071, 413), (1100, 416), (1100,...</td>\n",
        "      <td>5</td>\n",
        "      <td>[1071.375, 447.875]</td>\n",
-       "      <td>{'lat': 6.0234375, 'long': 20.8828125}</td>\n",
+       "      <td>{'lat': -6.0234375, 'long': 20.8828125}</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -317,7 +317,7 @@
        "      <td>[(1820, 385), (1836, 384), (1855, 383), (1855,...</td>\n",
        "      <td>3</td>\n",
        "      <td>[1837.125, 406.375]</td>\n",
-       "      <td>{'lat': 13.8046875, 'long': 164.4609375}</td>\n",
+       "      <td>{'lat': -13.8046875, 'long': 164.4609375}</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -339,15 +339,15 @@
        "3  [(1043, 411), (1071, 413), (1100, 416), (1100,...          5   \n",
        "4  [(1820, 385), (1836, 384), (1855, 383), (1855,...          3   \n",
        "\n",
-       "       center_face_pos                                     lat_long  time  \n",
-       "0     [122.625, 429.5]       {'lat': 9.46875, 'long': -157.0078125}   1.0  \n",
-       "1   [1561.75, 429.875]       {'lat': 9.3984375, 'long': 112.828125}   1.0  \n",
-       "2       [569.0, 451.0]  {'lat': 5.4375, 'long': -73.31250000000001}   1.0  \n",
-       "3  [1071.375, 447.875]       {'lat': 6.0234375, 'long': 20.8828125}   1.0  \n",
-       "4  [1837.125, 406.375]     {'lat': 13.8046875, 'long': 164.4609375}   1.0  "
+       "       center_face_pos                                      lat_long  time  \n",
+       "0     [122.625, 429.5]       {'lat': -9.46875, 'long': -157.0078125}   1.0  \n",
+       "1   [1561.75, 429.875]       {'lat': -9.3984375, 'long': 112.828125}   1.0  \n",
+       "2       [569.0, 451.0]  {'lat': -5.4375, 'long': -73.31250000000001}   1.0  \n",
+       "3  [1071.375, 447.875]       {'lat': -6.0234375, 'long': 20.8828125}   1.0  \n",
+       "4  [1837.125, 406.375]     {'lat': -13.8046875, 'long': 164.4609375}   1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -412,46 +412,46 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'lat': 9.46875, 'long': -157.0078125}</td>\n",
+       "      <td>{'lat': -9.46875, 'long': -157.0078125}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>{'lat': 9.3984375, 'long': 112.828125}</td>\n",
+       "      <td>{'lat': -9.3984375, 'long': 112.828125}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'lat': 5.4375, 'long': -73.31250000000001}</td>\n",
+       "      <td>{'lat': -5.4375, 'long': -73.31250000000001}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>{'lat': 6.0234375, 'long': 20.8828125}</td>\n",
+       "      <td>{'lat': -6.0234375, 'long': 20.8828125}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>{'lat': 13.8046875, 'long': 164.4609375}</td>\n",
+       "      <td>{'lat': -13.8046875, 'long': 164.4609375}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   time  actors_id                                     lat_long\n",
-       "0   1.0          1       {'lat': 9.46875, 'long': -157.0078125}\n",
-       "1   1.0          2       {'lat': 9.3984375, 'long': 112.828125}\n",
-       "2   1.0          0  {'lat': 5.4375, 'long': -73.31250000000001}\n",
-       "3   1.0          5       {'lat': 6.0234375, 'long': 20.8828125}\n",
-       "4   1.0          3     {'lat': 13.8046875, 'long': 164.4609375}"
+       "   time  actors_id                                      lat_long\n",
+       "0   1.0          1       {'lat': -9.46875, 'long': -157.0078125}\n",
+       "1   1.0          2       {'lat': -9.3984375, 'long': 112.828125}\n",
+       "2   1.0          0  {'lat': -5.4375, 'long': -73.31250000000001}\n",
+       "3   1.0          5       {'lat': -6.0234375, 'long': 20.8828125}\n",
+       "4   1.0          3     {'lat': -13.8046875, 'long': 164.4609375}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
