now returning the bottom

--- a/ipynb/video360_face_clusteringd-drive.ipynb
+++ b/ipynb/video360_face_clusteringd-drive.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,13 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#obtaining the center position of the bounding boxes\n",
     "\n",
-    "actors_pos['center_face_pos'] = actors_pos.bounds.apply(lambda x: np.array(x).mean(axis = 0))"
+    "actors_pos['center_face_pos'] = actors_pos.bounds.apply(lambda x: np.array(x).mean(axis = 0))\n",
+    "\n",
+    "actors_pos['bottom_face_pos'] = actors_pos.bounds.apply(lambda x: x[5])"
    ]
   },
   {
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,11 +222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "actors_pos['lat_long'] = actors_pos.center_face_pos.apply(lat_long_from_xy)"
+    "#actors_pos['lat_long'] = actors_pos.center_face_pos.apply(lat_long_from_xy)\n",
+    "\n",
+    "actors_pos['lat_long'] = actors_pos.bottom_face_pos.apply(lat_long_from_xy)"
    ]
   },
   {
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,6 +269,7 @@
        "      <th>bounds</th>\n",
        "      <th>actors_id</th>\n",
        "      <th>center_face_pos</th>\n",
+       "      <th>bottom_face_pos</th>\n",
        "      <th>lat_long</th>\n",
        "      <th>time</th>\n",
        "    </tr>\n",
@@ -277,7 +282,8 @@
        "      <td>[(2242, 804), (2275, 800), (2310, 795), (2310,...</td>\n",
        "      <td>0</td>\n",
        "      <td>[2275.75, 861.0]</td>\n",
-       "      <td>{'lat': -9.28125, 'long': 33.3515625}</td>\n",
+       "      <td>(2275, 923)</td>\n",
+       "      <td>{'lat': -3.46875, 'long': 33.28125}</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -287,7 +293,8 @@
        "      <td>[(2144, 787), (2189, 792), (2234, 798), (2234,...</td>\n",
        "      <td>0</td>\n",
        "      <td>[2189.0, 850.625]</td>\n",
-       "      <td>{'lat': -10.25390625, 'long': 25.21875}</td>\n",
+       "      <td>(2189, 909)</td>\n",
+       "      <td>{'lat': -4.78125, 'long': 25.21875}</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -297,7 +304,8 @@
        "      <td>[(2462, 985), (2554, 986), (2645, 985), (2645,...</td>\n",
        "      <td>0</td>\n",
        "      <td>[2553.625, 1080.0]</td>\n",
-       "      <td>{'lat': 11.25, 'long': 59.40234375}</td>\n",
+       "      <td>(2554, 1175)</td>\n",
+       "      <td>{'lat': 20.15625, 'long': 59.43750000000003}</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -307,7 +315,8 @@
        "      <td>[(2138, 783), (2183, 788), (2228, 794), (2228,...</td>\n",
        "      <td>0</td>\n",
        "      <td>[2183.0, 857.625]</td>\n",
-       "      <td>{'lat': -9.59765625, 'long': 24.65625}</td>\n",
+       "      <td>(2183, 928)</td>\n",
+       "      <td>{'lat': -3.0, 'long': 24.65625}</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -317,7 +326,8 @@
        "      <td>[(2141, 796), (2189, 801), (2234, 806), (2234,...</td>\n",
        "      <td>0</td>\n",
        "      <td>[2187.875, 872.625]</td>\n",
-       "      <td>{'lat': -8.19140625, 'long': 25.11328124999997}</td>\n",
+       "      <td>(2189, 945)</td>\n",
+       "      <td>{'lat': -1.40625, 'long': 25.21875}</td>\n",
        "      <td>14.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -339,15 +349,22 @@
        "3  [(2138, 783), (2183, 788), (2228, 794), (2228,...          0   \n",
        "4  [(2141, 796), (2189, 801), (2234, 806), (2234,...          0   \n",
        "\n",
-       "       center_face_pos                                         lat_long  time  \n",
-       "0     [2275.75, 861.0]            {'lat': -9.28125, 'long': 33.3515625}   1.0  \n",
-       "1    [2189.0, 850.625]          {'lat': -10.25390625, 'long': 25.21875}   2.0  \n",
-       "2   [2553.625, 1080.0]              {'lat': 11.25, 'long': 59.40234375}   6.0  \n",
-       "3    [2183.0, 857.625]           {'lat': -9.59765625, 'long': 24.65625}   8.0  \n",
-       "4  [2187.875, 872.625]  {'lat': -8.19140625, 'long': 25.11328124999997}  14.0  "
+       "       center_face_pos bottom_face_pos  \\\n",
+       "0     [2275.75, 861.0]     (2275, 923)   \n",
+       "1    [2189.0, 850.625]     (2189, 909)   \n",
+       "2   [2553.625, 1080.0]    (2554, 1175)   \n",
+       "3    [2183.0, 857.625]     (2183, 928)   \n",
+       "4  [2187.875, 872.625]     (2189, 945)   \n",
+       "\n",
+       "                                       lat_long  time  \n",
+       "0           {'lat': -3.46875, 'long': 33.28125}   1.0  \n",
+       "1           {'lat': -4.78125, 'long': 25.21875}   2.0  \n",
+       "2  {'lat': 20.15625, 'long': 59.43750000000003}   6.0  \n",
+       "3               {'lat': -3.0, 'long': 24.65625}   8.0  \n",
+       "4           {'lat': -1.40625, 'long': 25.21875}  14.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -412,46 +429,46 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'lat': -9.28125, 'long': 33.3515625}</td>\n",
+       "      <td>{'lat': -3.46875, 'long': 33.28125}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'lat': -10.25390625, 'long': 25.21875}</td>\n",
+       "      <td>{'lat': -4.78125, 'long': 25.21875}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'lat': 11.25, 'long': 59.40234375}</td>\n",
+       "      <td>{'lat': 20.15625, 'long': 59.43750000000003}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'lat': -9.59765625, 'long': 24.65625}</td>\n",
+       "      <td>{'lat': -3.0, 'long': 24.65625}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>14.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>{'lat': -8.19140625, 'long': 25.11328124999997}</td>\n",
+       "      <td>{'lat': -1.40625, 'long': 25.21875}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   time  actors_id                                         lat_long\n",
-       "0   1.0          0            {'lat': -9.28125, 'long': 33.3515625}\n",
-       "1   2.0          0          {'lat': -10.25390625, 'long': 25.21875}\n",
-       "2   6.0          0              {'lat': 11.25, 'long': 59.40234375}\n",
-       "3   8.0          0           {'lat': -9.59765625, 'long': 24.65625}\n",
-       "4  14.0          0  {'lat': -8.19140625, 'long': 25.11328124999997}"
+       "   time  actors_id                                      lat_long\n",
+       "0   1.0          0           {'lat': -3.46875, 'long': 33.28125}\n",
+       "1   2.0          0           {'lat': -4.78125, 'long': 25.21875}\n",
+       "2   6.0          0  {'lat': 20.15625, 'long': 59.43750000000003}\n",
+       "3   8.0          0               {'lat': -3.0, 'long': 24.65625}\n",
+       "4  14.0          0           {'lat': -1.40625, 'long': 25.21875}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
