added duration info

--- a/ipynb/standard_video_clustering.ipynb
+++ b/ipynb/standard_video_clustering.ipynb
@@ -190,6 +190,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Video duration is 00:03:30 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
